--- a/astrobin/static/astrobin/scss/variables-high-contrast.scss
+++ b/astrobin/static/astrobin/scss/variables-high-contrast.scss
@@ -8,6 +8,8 @@ $green: #FFF;
 $red: #FFF;
 
 $gold: #FFF;
+$text-on-gold: #111;
+$strong-text-on-gold: #000;
 $silver: #CACACA;
 $bronze: #999;
 
